# DealsHunterBot

./: README.md  bot.py  credentials.json  deal_fetcher.py  notification_manager.py  pyproject.toml  requirements.txt  stripe_config.py  test_firebase.py  user_manager.py  webhook.py
stores/: __init__.py  aliexpress_store.py  amazon_store.py  ebay_store.py  shein_store.py
translations/: lang.py
