[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "firebase-admin>=6.6.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "requests>=2.32.3",
    "stripe>=11.6.0",
    "telegram>=0.0.1",
    "twilio>=9.4.6",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
    "gunicorn>=23.0.0",
    "python-telegram-bot>=21.11.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
]
